--- a/res/layout/system_shortcut.xml
+++ b/res/layout/system_shortcut.xml
@@ -33,6 +33,7 @@
         android:paddingStart="@dimen/deep_shortcuts_text_padding_start"
         android:paddingEnd="@dimen/popup_padding_end"
         android:textSize="14sp"
+        android:minHeight="@dimen/bg_popup_item_height"
         android:minLines="1"
         android:maxLines="2"
         android:ellipsize="end"
